--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  font-family: "Quicksand", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -54,7 +55,7 @@ body {
   border-radius: 0.1rem;
   position: absolute;
   bottom: 0px;
-  right: 280px;
+  right: 0px;
   max-width: 320px;
   background: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
@@ -73,8 +74,8 @@ body {
 .mapbox__legend__range {
   border-radius: 0.1rem;
   position: absolute;
-  top: 16px;
-  right: 280px;
+  top: 0px;
+  right: 0px;
   background: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   margin: 20px;
@@ -85,7 +86,6 @@ body {
   color: black;
   text-transform: uppercase;
   outline: none;
-
 }
 
 .mapbox__legend__row {
